fix: header & footer z-index, due to swiper's z-index: 1 and add fixed footer

--- a/movie-search/src/components/header/header.scss
+++ b/movie-search/src/components/header/header.scss
@@ -2,7 +2,7 @@
   & {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 2;
 
     padding: 10px 0;
 
